--- a/regressão/Carros/modelagem.ipynb
+++ b/regressão/Carros/modelagem.ipynb
@@ -1405,7 +1405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um caso interessante de se observar são nos erros excepcionalmente grandes e logo de cara entendemos o motivo dessas predições terem um erro enorme, trata-se que esses 2 registros logo abaixo tem o preço de \\$ 1 dólar, isso é, não se trata do preço verdadeiro do automóvel. Entretanto, observamos que ambos os veículos estão com algum defeito (emergency), logo pode ser que o vendedor desse carro esta sujeito a negociações e por isso colocou o preço do carro a \\$ 1 dólar apenas por simbolismo. \n",
+    "Um caso interessante de se observar são nos erros excepcionalmente grandes e logo de cara entendemos o motivo dessas predições terem um erro enorme, trata-se que esses 2 registros logo abaixo tem o preço de um dólar, isso é, não se trata do preço verdadeiro do automóvel. Entretanto, observamos que ambos os veículos estão com algum defeito (emergency), logo pode ser que o vendedor desse carro esta sujeito a negociações e por isso colocou o preço do carro a um dólar apenas por simbolismo. \n",
     "\n",
     "Podemos concluir que esses carros são literalmente um ruido para o nosso modelo.\n",
     "\n",
@@ -2396,7 +2396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consideremos 3 preços em 3 escalas diferentes: \\$ 500, \\$ 5000, \\$ 50000.\n",
+    "Consideremos 3 preços em 3 escalas diferentes: 500, 5000, 50000.\n",
     "\n",
     "respectivamente, 20\\% de cada um desses 3 preços é:\n",
     "\n",
